@@ -70,7 +70,7 @@ class FlowCnecSortingTest {
     void getMostLimitingElements() {
         List<FlowCnec> costlyElements = FlowCnecSorting.sortByMargin(Set.of(cnec1, cnec2, cnec3, pureMnec), MEGAWATT, marginEvaluator, flowResult);
         assertEquals(3, costlyElements.size());
-        assertSame(cnec3, costlyElements.get(0));
+        assertSame(cnec3, costlyElements.getFirst());
         assertSame(cnec1, costlyElements.get(1));
         assertSame(cnec2, costlyElements.get(2));
     }
