@@ -99,7 +99,7 @@ class MnecViolationCostEvaluatorTest {
 
         List<FlowCnec> costlyElements = evaluator.evaluate(currentFlowResult, null).getCostlyElements(Set.of(), Set.of());
         assertEquals(2, costlyElements.size());
-        assertSame(mnec2, costlyElements.get(0));
+        assertSame(mnec2, costlyElements.getFirst());
         assertSame(mnec1, costlyElements.get(1));
     }
 
@@ -142,7 +142,7 @@ class MnecViolationCostEvaluatorTest {
 
         List<FlowCnec> costlyElements = evaluator.evaluate(currentFlowResult, null).getCostlyElements(Set.of(), Set.of());
         assertEquals(2, costlyElements.size());
-        assertSame(mnec2, costlyElements.get(0));
+        assertSame(mnec2, costlyElements.getFirst());
         assertSame(mnec1, costlyElements.get(1));
     }
 }
